--- a/views/Inmuebles.ejs
+++ b/views/Inmuebles.ejs
@@ -39,11 +39,25 @@
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Actualizar</button></div>
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" id="enviar" onclick="iratras()">Consultar</button></div>
             </div>
-        </div>
+        
+        <br><br>
+
+
+        <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
+
+
+        <button class="btn btn-primary profile-button" type="button">Actualizar</button>
+
+
+        <button class="btn btn-primary profile-button" onclick="Consultar()" type="button" >Mostrar</button>
+
       
             </div>
         </div>
     </div>
 </div>
 </div>
-</div>            
+</div>    
+
+</body>
+</html>
