se finaliza el CRUD con MONGODB

--- a/views/Propietarios.ejs
+++ b/views/Propietarios.ejs
@@ -55,13 +55,13 @@
 
                 <br><br>
                 
-                <button class="btn btn-primary profile-button" type="button">Eliminar</button>
+                <button class="btn btn-primary profile-button" onclick="Eliminar()" type="button">Eliminar</button>
 
 
                 <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
 
             
-                <button class="btn btn-primary profile-button" type="button">Actualizar</button>
+                <button class="btn btn-primary profile-button" onclick="Actualizar()" type="button">Actualizar</button>
               
 
                 <button class="btn btn-primary profile-button" onclick="UserById()" type="button">Mostrar</button>
