--- a/views/Propietarios.ejs
+++ b/views/Propietarios.ejs
@@ -48,7 +48,7 @@
 
                     <div class="col-md-12"><label class="labels">Dirección De Contacto</label><input type="text" class="form-control" placeholder="Dirección de Contacto" value=""  id="direccion_De_Contacto"></div>
                     
-                    <div class="col-md-12"><label class="labels">Documento De Identidad</label><input type="text" class="form-control" placeholder="Documento De Identidad" value="" id="documento_De_Identidad"></div>
+                    <div class="col-md-12"><label class="labels">Buscar Propietario por ID</label><input type="text" class="form-control" placeholder="Documento De Identidad" value="" id="documento_De_Identidad"></div>
 
                   
                 </div>
@@ -64,9 +64,11 @@
                 <button class="btn btn-primary profile-button" onclick="Actualizar()" type="button">Actualizar</button>
               
 
-                <button class="btn btn-primary profile-button" onclick="UserById()" type="button">Mostrar</button>
+            <button class="btn btn-primary profile-button" onclick="UserById()" type="button">Mostrar</button>
 
 
+                <button class="btn btn-primary profile-button" onclick="window.print()" type="button">Imprimir</button>
+               
 
 
             </div>
