--- a/views/Inmuebles.ejs
+++ b/views/Inmuebles.ejs
@@ -44,15 +44,14 @@
         <br><br>
 
 
-        <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
+                <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
 
+            
+                <button class="btn btn-primary profile-button" onclick="Actualizar()" type="button">Actualizar</button>
+              
 
-        <button class="btn btn-primary profile-button" type="button">Actualizar</button>
+                <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Mostrar</button>
 
-
-        <button class="btn btn-primary profile-button" onclick="Consultar()" type="button" >Mostrar</button>
-
-      
       
       
             </div>
