--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+ <script type="text/javascript" src="js/Index.js"></script>
+    <title>Document</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    
+    <form>
+        <h1 class="title">Login</h1>
+        <label>
+            <i class="fa-solid fa-user"></i>
+            <input placeholder="username" type="text" id="username">
+        </label>
+        <label>
+            <i class="fa-solid fa-lock"></i>
+            <input placeholder="password" type="password" id="Password">
+        </label>
+       
 
-<p1>Bienvenido a propietarios</p1>
-<a href="/homeowner">Ir a propietarios</a>
+       
+         <button class="btn btn-primary profile-button" onclick="Ingresar()" type="button">Ingresar</button>
+    </form>
+    
+    
+    
 </body>
+
 </html>
+
+
+
+
+
