--- a/views/Inmuebles.ejs
+++ b/views/Inmuebles.ejs
@@ -35,14 +35,16 @@
                     <div class="col-md-12"><label class="labels">Id Tarifa </label><input type="text" class="form-control" placeholder="" value=""></div>
                 
                 </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Registrar</button></div>
+             
+
+             <!------    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Registrar</button></div>
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Actualizar</button></div>
                 <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" id="enviar" onclick="iratras()">Consultar</button></div>
-            </div>
+            
         
+         ---------->
         
-        <br><br>
-
+               <br><br>
 
                 <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
 
@@ -52,6 +54,11 @@
 
                 <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Mostrar</button>
 
+                 <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Eliminar</button>
+
+ <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Imprimir</button>
+
+</div>
       
       
             </div>
