--- a/views/Inmuebles.ejs
+++ b/views/Inmuebles.ejs
@@ -1,72 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/inmuebles.css">
+    <link rel="stylesheet" href="css/style_Inmuebles.css">
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'>
     <link href='#' rel='stylesheet'>
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script type='text/javascript' src='js/Inmuebles.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <title></title>
+    <title>Inmuebles</title>
 </head>
+
 <body>
     <style>
-    body {
-        background: rgb(99, 39, 120)
-    }</style>
-    
-  <div class="container rounded bg-white mt-5 mb-5">
-    <div class="row">
-        <div class="col-md-6 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="square mt-lg-4" width="640px" src="https://www.cisa.gov.co/PortalCisa/media/4337/los-mejores-bienes-inmuebles-muebles-cisa.png"><span class="flex center"></span><span class="text-black-50"></span><span> </span></div>
-    </div>
-        <div class="col-md-6 border-right">
-            <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">INMUEBLES</h4>
+        body {
+            background: rgb(99, 39, 120)
+        }
+    </style>
+
+    <div class="container rounded bg-white mt-5 mb-5">
+        <div class="row">
+            <div class="col-md-6 border-right">
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="square mt-lg-4"
+                        width="640px"
+                        src="https://www.cisa.gov.co/PortalCisa/media/4337/los-mejores-bienes-inmuebles-muebles-cisa.png"><span
+                        class="flex center"></span><span class="text-black-50"></span><span> </span></div>
+            </div>
+            <div class="col-md-6 border-right">
+                <div class="p-3 py-5">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h4 class="text-right">INMUEBLES</h4>
+                    </div>
+
+                    <div class="row mt-3">
+                        <div class="col-md-12"><label class="labels">Identificación del Inmueble </label><input
+                                type="text" class="form-control" placeholder="" value="" id="Id_inmueble"></div>
+                        <div class="col-md-12"><label class="labels">Direccion </label><input type="text"
+                                class="form-control" placeholder="" value="" id="Direccion"></div>
+                        <div class="col-md-12"><label class="labels">Identificación del Propietario </label><input
+                                type="text" class="form-control" placeholder="" value="" id="Numero_Identificacion">
+                        </div>
+                    </div>
+                    <br><br>
+                    <button class="btn btn-primary profile-button" onclick="Registrar_Inmueble()"
+                        type="button">Guardar</button>
+
+                    <button class="btn btn-primary profile-button" onclick="Actualizar_Inmueble()"
+                        type="button">Actualizar</button>
+
+
+                    <button class="btn btn-primary profile-button" onclick="mostrarInmuebles()"
+                        type="button">Mostrar</button>
+
+                    <button class="btn btn-primary profile-button" onclick="window.print()"
+                        type="button">Imprimir</button>
                 </div>
-                
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Id Inmueble </label><input type="text" class="form-control" placeholder="" value=""></div>
-                    <div class="col-md-12"><label class="labels">Direccion </label><input type="text" class="form-control" placeholder="" value=""></div>
-                    <div class="col-md-12"><label class="labels">Numero Identificacion </label><input type="text" class="form-control" placeholder="" value=""></div>
-                    <div class="col-md-12"><label class="labels">Id Tarifa </label><input type="text" class="form-control" placeholder="" value=""></div>
-                
-                </div>
-             
-
-             <!------    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Registrar</button></div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Actualizar</button></div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" id="enviar" onclick="iratras()">Consultar</button></div>
-            
-        
-         ---------->
-        
-               <br><br>
-
-                <button class="btn btn-primary profile-button" onclick="Registrar()" type="button" >Guardar</button>
-
-            
-                <button class="btn btn-primary profile-button" onclick="Actualizar()" type="button">Actualizar</button>
-              
-
-                <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Mostrar</button>
-
-                 <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Eliminar</button>
-
- <button class="btn btn-primary profile-button" onclick="InmuebleById()" type="button">Imprimir</button>
-
-</div>
-      
-      
             </div>
         </div>
     </div>
-</div>
-</div>
-</div>    
-
+    </div>
+    </div>
+    </div>
 </body>
 </html>
