--- a/views/Menu.ejs
+++ b/views/Menu.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style_Menu.css">
 
 
-	<title></title>
+	<title>Menu</title>
 </head>
 
 <body>
@@ -24,9 +24,9 @@
                                 <div class="page-title  home text-center">
                                   <span class="heading-page">ALTOS DE BUCARAMANGA
                                   </span>
-                                    <p class="mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="mt20"></p>
                                 </div>
-
+                                
                                 <div class="hexagon-menu clear">
                                     <div class="hexagon-item">
                                         <div class="hex-item">
@@ -39,10 +39,7 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-
-                                        <a  class="hex-content" href="/homeowner">
-
-                                     
+                                        <a  class="hex-content" href="/homeowner">                                    
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="fa fa-universal-access"></i>
@@ -52,6 +49,7 @@
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
                                     </div>
+
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
@@ -75,6 +73,7 @@
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
                                     </div>
+
                                     <div class="hexagon-item">
                                         <div class="hex-item">
                                             <div></div>
@@ -96,10 +95,6 @@
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>    
                                     </div>
-                                   
-                                    
-                                   
-                               
                                 </div>
                             </div>
                         </div>
@@ -107,8 +102,5 @@
                 </div>
             </div>
   </main>
-
-<p1>Bienvenido a propietarios</p1>
-
 </body>
 </html>
